<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/action_send"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/azure"
        android:onClick="onClick"
        android:text="@string/call"
        app:layout_constraintEnd_toStartOf="@+id/end_guideline"
        app:layout_constraintStart_toEndOf="@+id/start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/barrier" />

    <Button
        android:id="@+id/action_end_call"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/azure"
        android:onClick="onClick"
        android:text="@string/end_call"
        app:layout_constraintEnd_toStartOf="@+id/end_guideline"
        app:layout_constraintStart_toEndOf="@+id/start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/action_send" />


    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username"
        android:inputType="textNoSuggestions"
        app:layout_constraintEnd_toStartOf="@+id/info_icon"
        app:layout_constraintStart_toEndOf="@+id/recipient"
        app:layout_constraintTop_toBottomOf="@+id/radio_group" />

    <EditText
        android:id="@+id/message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_message"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/end_guideline"
        app:layout_constraintStart_toEndOf="@+id/start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <ImageView
        android:id="@+id/info_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:onClick="onClick"
        android:src="@android:drawable/ic_menu_info_details"
        app:layout_constraintBottom_toBottomOf="@+id/username"
        app:layout_constraintEnd_toStartOf="@+id/end_guideline"
        app:layout_constraintTop_toTopOf="@+id/username" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/message"
        app:layout_constraintEnd_toStartOf="@+id/end_guideline"
        app:layout_constraintStart_toEndOf="@+id/start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/top_guideline">

        <RadioButton
            android:id="@+id/action_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onClick"
            android:text="@string/call" />

        <RadioButton
            android:id="@+id/action_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/message" />

    </RadioGroup>

    <Spinner
        android:id="@+id/recipient"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:dropDownWidth="100dp"
        android:dropDownVerticalOffset="40dp"
        android:fontFamily="sans-serif-medium"
        android:spinnerMode="dropdown"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/username"
        app:layout_constraintStart_toEndOf="@+id/start_guideline"
        app:layout_constraintTop_toTopOf="@+id/username" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="message"
        app:layout_constraintEnd_toStartOf="@+id/end_guideline"
        app:layout_constraintStart_toEndOf="@+id/start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />


</androidx.constraintlayout.widget.ConstraintLayout>